# sp1-vector

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile.operator  README.md  book.toml  chains.example.json  render.yaml  run_operator.sh
.github/workflows/: book.yml  pr.yml
book/: SUMMARY.md  architecture.md  book.toml  components.md  deployed-contracts.md  deployment.md  reproducible-builds.md
book/book/: 404.html  components.html  deployed-contracts.html  deployment.html  index.html  print.html  query-data-root-proofs.html  reproducible-builds.html  searchindex.js  searchindex.json
book/src/: deployed-contracts.md  deployment.md  introduction.md  query-data-root-proofs.md
contracts/: .env.example  .gitignore  README.md  foundry.toml  remappings.txt
contracts/script/: Base.s.sol  Deploy.s.sol  Guardian.s.sol  UpdateVkey.s.sol  UpdateVkeySingle.s.sol  Upgrade.s.sol  VectorX.s.sol
contracts/src/: SP1Vector.sol  VectorX.sol
contracts/src/interfaces/: ISP1Vector.sol  IVectorX.sol
contracts/test/: SP1Vector.t.sol  VectorX.t.sol
elf/: riscv32im-succinct-zkvm-elf  sp1-vector-docker  sp1-vector-elf  vector-elf
header-range/: Cargo.toml
header-range/elf/: riscv32im-succinct-zkvm-elf
header-range/src/: main.rs  types.rs
primitives/: Cargo.toml
primitives/src/: consts.rs  header_range.rs  justification.rs  lib.rs  merkle.rs  rotate.rs  types.rs  utils.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
query/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
query/app/api/: route.ts
query/app/api/health/: route.ts
query/app/api/justification/: route.ts
query/app/api/range/: route.ts
query/app/utils/: abi.ts  avail.ts  deployments.json  shared.ts
rotate/: Cargo.toml
rotate/elf/: riscv32im-succinct-zkvm-elf
rotate/src/: main.rs
script/: .env.example  Cargo.toml  build.rs
script/src/: consts.rs  input.rs  lib.rs  main.rs  redis.rs  relay.rs  types.rs
services/: .env.example  Cargo.toml
services/src/: aws.rs  input.rs  lib.rs  redis.rs  types.rs
