[workspace]
members = ["script", "services", "primitives", "program"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.68"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v2.2.2.0-rc1" }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.14"
serde_json = "1.0.86"
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", default-features = false }
subxt = "0.34"
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
ed25519-consensus = { version = "2.1", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false }
alloy-primitives = { version = "0.8.0", features = ["serde"] }
alloy-sol-types = { version = "0.8.0" }
blake2 = "0.10.6"
itertools = "0.10.5"
alloy = { version = "0.8.0", features = ["full"] }
chrono = "0.4.39"

sp1-sdk = "4.0.0-rc.8"
sp1-build = "4.0.0-rc.8"

reqwest = { version = "0.11.20", features = ["json"] }
futures = "0.3.30"

aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"


sp1-vectorx-script = { path = "script" }
sp1-vectorx-program = { path = "program" }
services = { path = "services" }
sp1-vector-primitives = { path = "primitives" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }

sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-0.10.8-sp1-4.0.0-rc.3" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0-rc.3" }
