[workspace]
members = ["script", "services", "primitives", "program"]
resolver = "2"

[workspace.dependencies]
# Avail
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v2.2.5.1" }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-10", default-features = false }
subxt = "0.34"
codec = { package = "parity-scale-codec", version = "3", default-features = false }

# Cryptography
ed25519-consensus = { version = "2.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
blake2 = "0.10.6"

# Alloy
alloy = { version = "0.11.1", features = ["full"] }

# Common
anyhow = "1.0.68"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.14"
serde_json = "1.0.86"
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
itertools = "0.10.5"
chrono = "0.4.39"

# sp1
sp1-sdk = "4.0.0-rc.9"
sp1-build = "4.0.0-rc.9"
sp1-zkvm = "4.0.0-rc.9"

reqwest = { version = "0.11.20", features = ["json"] }
futures = "0.3.30"

aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"

sp1-vectorx-script = { path = "script" }
sp1-vectorx-program = { path = "program" }
services = { path = "services" }
sp1-vector-primitives = { path = "primitives" }

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-10" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-10" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-10" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-10" }

sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0-rc.3" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0-rc.3" }
