[package]
version = "0.1.0"
name = "sp1-vector-primitives"
edition = "2021"

[dependencies]
serde.workspace = true
sha2.workspace = true
ed25519-consensus.workspace = true
codec.workspace = true
blake2.workspace = true
itertools.workspace = true
tokio.workspace = true
alloy-primitives = "0.8"
alloy-sol-types = { version = "0.8" }

[dev-dependencies]
primitive-types = "0.12.2"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v2.2.2.0-rc1" }
