[package]
version = "0.1.0"
name = "sp1-vectorx-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }
ed25519-consensus = { version = "2", default-features = false }

[patch.crates-io]
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
