[workspace]
[package]
version = "0.1.0"
name = "sp1-vectorx-script"
edition = "2021"

[[bin]]
name = "operator"
path = "bin/operator.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
sp1-vector-primitives = { path = "../primitives" }
services = { path = "../services" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
env_logger = { version = "0.9.0", default-features = false }
hex = "0.4.3"
log = { version = "0.4.14", default-features = false }
tokio = { version = "1.2.0", features = ["full"] }

dotenv = "0.15.0"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v2.2.2.0-rc1" }
anyhow = "1.0.68"
clap = { version = "4.4.9", features = ["derive"] }

alloy = { version = "0.1.1", features = ["full"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }

# Dependency `subxt` uses it's own 'version' of sp-core so we need to patch it :)
[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
