[package]
version = "0.1.0"
name = "sp1-vectorx-script"
edition = "2021"

[[bin]]
name = "operator"
path = "bin/operator.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[dependencies]
sp1-vector-primitives = { workspace = true }
services = { workspace = true }
sp1-sdk = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

dotenv = { workspace = true }
avail-subxt = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }