[package]
version = "0.1.0"
name = "sp1-vectorx-script"
edition = "2021"

[[bin]]
name = "operator"
path = "bin/operator.rs"

[[bin]]
name = "genesis"
path = "bin/genesis.rs"

[[bin]]
name = "vkey"
path = "bin/vkey.rs"

[[bin]]
name = "test"
path = "bin/test.rs"

[[bin]]
name = "costs"
path = "bin/costs.rs"

[dependencies]
sp1-vector-primitives = { workspace = true }
services = { workspace = true }
sp1-sdk = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

dotenv = { workspace = true }
avail-subxt = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"]  }
reqwest = { workspace = true }
futures = { workspace = true }

alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
csv = "1.3.1"
rand = "0.8.5"
sp1-build = { workspace = true }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
sp1-build = { workspace = true }
