[workspace]
[package]
version = "0.1.0"
name = "services"
edition = "2021"

[[bin]]
name = "indexer"
path = "bin/indexer.rs"

[dependencies]
sp1-vectorx-primitives = { path = "../primitives" }
env_logger = { version = "0.9.0", default-features = false }
hex = "0.4.3"
itertools = "0.10.5"
log = { version = "0.4.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.2.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }

dotenv = "0.15.0"
avail-subxt = { git = "https://github.com/availproject/avail.git", tag = "v2.2.2.0-rc1" }
subxt = "0.34"
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
alloy-primitives = { version = "0.7.5", features = ["serde"] }
anyhow = "1.0.68"
futures = "0.3.30"

aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.34.0"

# Dependency `subxt` uses it's own 'version' of sp-core so we need to patch it :)
[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-5" }
