[package]
version = "0.1.0"
name = "services"
edition = "2021"

[[bin]]
name = "indexer"
path = "bin/indexer.rs"

[dependencies]
sp1-vector-primitives = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

dotenv = { workspace = true }
avail-subxt = { workspace = true }
subxt = { workspace = true }
sp-core = { workspace = true }
codec = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }

[dev-dependencies]
test-case = "3.3.1"
